--- a/malaria.html
+++ b/malaria.html
@@ -480,7 +480,7 @@ font-weight: bold;
 <div id="iv-trial-timeline" class="section level4">
 <h4>iv) Trial Timeline</h4>
 <p>A figure detailing the trial timeline, including length of time needed for startup before randomization, randomization, total (not individual) follow-up time, data cleaning, and statistical analysis is included below.</p>
-<p>Figure 1. Study Timeline <br> <img src="images2/trial2.JPG" alt="1" style="width:100%; border:1px solid"></p>
+<p>Figure 1. Study Timeline <br> <img src="images2/trial2.JPG" alt="trial2" style="width:100%; border:1px solid"></p>
 <p><br></p>
 </div>
 </div>
@@ -494,12 +494,33 @@ font-weight: bold;
 </div>
 <div id="ii-power-calculation-unadjusted-and-adjusted-effect-size" class="section level4">
 <h4>ii) Power Calculation: Unadjusted and Adjusted Effect Size</h4>
-<p>     According to Owusu-Agyei et al., the effect size for a similar study examining Vitamin A and zinc supplementation as opposed to zinc alone in reducing the incidence of clinical malaria was 20%. Another study by Sazawal et al. estimated the effect size for a study examining the effect of iron and zinc supplementation between the intervention and control group in reducing overall mortality rates was 20%. Other studies used an estimated effect size of 30% (malaria rate reduction) and 50% (number of clinical malaria episodes). Thus, the unadjusted effect size to use for this trial to determine the least clinically meaningful effect size will be 20%, based on previous research. The adjusted effect size is 0.62-0.78= -0.16. For a calculation of this adjusted effect size, please refer to Appendix A.</p>
+<p>     According to Owusu-Agyei et al., the effect size for a similar study examining Vitamin A and zinc supplementation as opposed to zinc alone in reducing the incidence of clinical malaria was 20%. Another study by Sazawal et al. estimated the effect size for a study examining the effect of iron and zinc supplementation between the intervention and control group in reducing overall mortality rates was 20%. Other studies used an estimated effect size of 30% (malaria rate reduction) and 50% (number of clinical malaria episodes). Thus, the unadjusted effect size to use for this trial to determine the least clinically meaningful effect size will be 20%, based on previous research. The adjusted effect size is 0.62-0.78= -0.16. A calculation of this adjusted effect size is included below.</p>
+<p>Figure 2. Calculation of Effect Size <br> <img src="images2/trial3.JPG" alt="trial3" style="width:100%; border:1px solid"></p>
+<p><br></p>
 </div>
 <div id="iii-sample-size" class="section level4">
 <h4>iii) Sample Size</h4>
 <p>     I would need a total sample size of 336 (1:1 allocation ratio) in order to obtain a power of 0.90 with the adjusted effect size of -0.18 at a 5% significance level. I used the PASS software in order to calculate the sample size.</p>
+<p><br></p>
+<p>Figure 3. Sample Size Calculation <br> <img src="images2/trial4.jpg" alt="trial4" style="width:100%; border:1px solid"></p>
+<p><br></p>
 </div>
+<div id="iv-sensitivity-analysis" class="section level4">
+<h4>iv) Sensitivity Analysis</h4>
+<p>     Assuming a power of 0.90 at a 5% significance level, increasing the effect size here decreases the sample size. At an effect size of -0.16, the total expected sample size would be 336. At an effect size of -0.20, the total expected sample size would be 220. At an effect size of -0.30, the total sample size would be 100. The effect sizes included in this table are similar to the ones used in other studies studying the association between vitamin or mineral supplementation and malaria-associated outcomes.</p>
+<p><br></p>
+<p>Figure 4. Sensitivity Analysis: Varying the Effect Size <br> <img src="images2/trial5.JPG" alt="trial5" style="width:100%; border:1px solid"></p>
+<p><br></p>
+</div>
+</div>
+<div id="safety-considerations" class="section level3">
+<h3>6.0 Safety Considerations</h3>
+<p>     The first safety outcome of interest, sudden death or death due to unknown causes, will be assessed via constant monitoring of the patients and clinician confirmation, in terms of non-compliance and loss to follow-up (includes death). The second safety outcome of interest is incidence of any respiratory disease, which will be measured of clinical diagnosis and examination. The third safety outcome of interest is number of febrile episodes, which will also be measure by clinician diagnosis and examination. These key safety outcomes are important in regard to malaria because they have occurred, albeit rarely, with other studies examining the association between vitamin or mineral supplementation and malaria-associate outcomes. Other more general safety outcomes that the trial will monitor include loss of normal physical functioning (e.g., organ dysfunction and damage).</p>
+<p><br></p>
+</div>
+<div id="limitations" class="section level3">
+<h3>7.0 Limitations</h3>
+<p>     There are several limitations of the proposed project. For example, the current trial only studies the association between Vitamin C supplementation and SoC against SoC in Ghananian adults. However, although age modifies this association, we are unable to take into account this effect modifier. In other words, our trial only studies Ghanaian adults when the pathway could be equally important for children as well. Another limitation of this proposed trial is that it recruits participants from mainly medical centers, hospitals, and clinics, limiting the sample to those who actually attend these institutions. This may bias the sample, making it potentially non-representative of the Ghananian population as a whole.</p>
 </div>
 </div>
 
