--- a/about.html
+++ b/about.html
@@ -211,8 +211,17 @@ $(document).ready(function () {
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Biostatistical Projects
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="test.html">test</a>
+      <a href="malaria.html">Proposal for Phase III RCT</a>
     </li>
   </ul>
 </li>
@@ -250,6 +259,12 @@ $(document).ready(function () {
 </div>
 <div id="note-to-self-include-fig_caption-yes-in-yaml-and-r-figure_x-echo-false-fig.cap-figure-1.-test-out.width-100-knitrinclude_graphicsimagesfigure5.jpg-in-code-chuck-for-figure-captions-and-image-insert" class="section level1">
 <h1>Note to Self: Include fig_caption: yes in YAML and {r figure_x, echo = FALSE, fig.cap = “Figure 1. Test”, out.width = ‘100%’} knitr::include_graphics(“images/figure5.jpg”) in code chuck for figure captions and image insert</h1>
+</div>
+<div id="note-to-self-to-include-images-in-html-output-use-code-chunk-start-r-resume-echo-false-out.width-75-out.extrastylebackground-color-000000-padding1px-display-inline-block" class="section level1">
+<h1>Note to Self: To include images in HTML output, use code chunk start r resume, echo = FALSE, out.width = “75%”, out.extra=‘style=“background-color: #000000; padding:1px; display: inline-block;”’}</h1>
+</div>
+<div id="knitrinclude_graphicsimages2depressed.jpg-code-chunk-end" class="section level1">
+<h1>knitr::include_graphics(“images2/depressed.JPG”) code chunk end</h1>
 </div>
 
 
