--- a/index.html
+++ b/index.html
@@ -211,8 +211,17 @@ $(document).ready(function () {
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Biostatistical Projects
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="test.html">test</a>
+      <a href="malaria.html">Proposal for Phase III RCT</a>
     </li>
   </ul>
 </li>
