--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@ font-weight: bold;
 </div>
 <div id="website" class="section level4">
 <h4>Website</h4>
-<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) so that I could showcase some of the projects that I have worked on over the past couple of years.</strong> I tried incorporating projects that showcase my various competencies, including:</p>
+<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.</strong> I tried incorporating projects that highlight my various competencies, including:</p>
 <ul>
 <li>Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)</li>
 <li>Ability to write scientific or research papers</li>
 <li>Understanding of how to clean, manipulate, and analyze data</li>
-<li>Knowledge of how to apply various regression techniques and models (e.g., linear, logistic)</li>
+<li>Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)</li>
 </ul>
 <p>Please take the time to glance at some of the projects on this website!</p>
 <p>To view my resume, you can click <a href="resume.html">here</a>.</p>
