--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@ font-weight: bold;
 </div>
 <div id="website" class="section level4">
 <h4>Website</h4>
-<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.</strong> I tried incorporating projects that highlight my various competencies, including:</p>
+<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) to showcase some of the projects that I have worked on over the past couple of years.</strong> I incorporated projects that highlight my various competencies, including:</p>
 <ul>
-<li>Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)</li>
+<li>Usage of various statistical programs and/or languages (e.g., R, SAS, SQL)</li>
 <li>Ability to write scientific or research papers</li>
 <li>Understanding of how to clean, manipulate, and analyze data</li>
 <li>Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)</li>
