--- a/malaria.html
+++ b/malaria.html
@@ -389,7 +389,7 @@ font-weight: bold;
 <ul>
 <li>Research Report Writing</li>
 <li>Biostatistics</li>
-<li>Survival Analysis</li>
+<li>Clinical Trial Design</li>
 </ul>
 <p><br></p>
 </div>
