--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ font-weight: bold;
 <li>Understanding of how to clean, manipulate, and analyze data</li>
 <li>Knowledge of how to apply various regression techniques and interpret models (e.g., linear, logistic)</li>
 </ul>
-<p>Please take the time to glance at some of the projects on this website!</p>
+<p>Note that all projects use hypothetical data, with the exception of the NHANES projects.</p>
 <p>To view my resume, you can click <a href="resume.html">here</a>.</p>
 <p><br></p>
 </div>
@@ -311,6 +311,11 @@ font-weight: bold;
 <h4>Contact Information</h4>
 <p>Jacky Choi <br> Primary Email: <a href="mailto:jmc2392@cumc.columbia.edu">jmc2392@cumc.columbia.edu</a><br />
 Alternate Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br> Phone: 917-216-1621</p>
+</div>
+<div id="copyright" class="section level4">
+<h4>Copyright</h4>
+<p>Copyright © 2019 Jacky Choi</p>
+<p>All rights reserved. This website or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the author.</p>
 </div>
 </div>
 
