--- a/exploratory1.html
+++ b/exploratory1.html
@@ -418,7 +418,7 @@ $(document).ready(function() {
 </div>
 <div id="introduction" class="section level3">
 <h3>Introduction</h3>
-<p>Accelerometers have become an increasingly important tool for studying around-the-clock physical activity in studies. Levels of activities can be counted by measuring voltage signals on a patient within a short span of time. The goal of this project is to summarize trends and patterns from data collected on a male patient who wore an accerlerometer device that recorded his physical activity for several months.</p>
+<p>Accelerometers have become an increasingly important tool for studying around-the-clock physical activity in studies. Levels of activities can be counted by measuring voltage signals on a patient within a short span of time. The goal of this project is to summarize trends and patterns from data collected on a male patient who wore an accelerometer device that recorded his physical activity for several months.</p>
 <p>Researchers specifically want to understand his patterns of physical activity over periods of time; thus, some important questions to explore include, but are not limited to:</p>
 <ul>
 <li>How does the patient’s activity level change over the course of the day?</li>
