--- a/resume.html
+++ b/resume.html
@@ -295,7 +295,7 @@ font-weight: bold;
 }
 
 </style>
-<p><br> <img src="images/Resume.JPG" width="100%" /></p>
+<p><br> <img src="images/Resume.JPG" alt="1" style="width:100%;"></p>
 
 
 
