--- a/survival.html
+++ b/survival.html
@@ -681,7 +681,8 @@ summary(model1)</code></pre>
 </div>
 <div id="model-2-1" class="section level4">
 <h4>Model 2</h4>
-<p>We next fit a multivariate Cox model with age, BMI, and admission year as additional covariates. We include “factor” in our code for any multi-level categorical variables. From the R output below, we can see that the z test statistic is 1.106; the Pr(|z| ≥1.106) = 0.2689, which is greater than alpha level of 0.05. Thus, at the 5% significance level, we fail to reject the null hypothesis; there is insufficient data on hand to conclude that the rate of death between patients with first time incident stroke and recurrent stroke is statistically different, after adjusting for age, BMI, and admission year. These results are identical to those derived from Model 2 using SAS. Note that the likeihood ratio test results provided below only test whether the current model is a better fit than the null model.</p>
+<p>We next fit a multivariate Cox model with age, BMI, and admission year as additional covariates. We include “factor” in our code for any multi-level categorical variables; note that we also have the option of changing our reference category for any categorical predictors by using <code>relevel(factor( ), ref = ' ')</code>.</p>
+<p>From the R output below, we can see that the z test statistic is 1.106; the Pr(|z| ≥1.106) = 0.2689, which is greater than alpha level of 0.05. Thus, at the 5% significance level, we fail to reject the null hypothesis; there is insufficient data on hand to conclude that the rate of death between patients with first time incident stroke and recurrent stroke is statistically different, after adjusting for age, BMI, and admission year. These results are identical to those derived from Model 2 using SAS. Note that the likeihood ratio test results provided below only test whether the current model is a better fit than the null model.</p>
 <p>Figure 10: Model 2 Using R <br></p>
 <pre class="r"><code>model2 &lt;- coxph(Surv(lenfol, fstat) ~ stroke + factor(age_c) + bmi + factor(year), data = stroke)
 summary(model2)</code></pre>
@@ -716,6 +717,7 @@ summary(model2)</code></pre>
 ## Likelihood ratio test= 146.8  on 7 df,   p=&lt;2e-16
 ## Wald test            = 117.1  on 7 df,   p=&lt;2e-16
 ## Score (logrank) test = 142.5  on 7 df,   p=&lt;2e-16</code></pre>
+<p><br></p>
 </div>
 <div id="model-3-1" class="section level4">
 <h4>Model 3</h4>
@@ -760,8 +762,9 @@ summary(model3)</code></pre>
 ## Likelihood ratio test= 161.4  on 10 df,   p=&lt;2e-16
 ## Wald test            = 115  on 10 df,   p=&lt;2e-16
 ## Score (logrank) test = 150.2  on 10 df,   p=&lt;2e-16</code></pre>
-<div id="test-ph-assumption" class="section level5">
-<h5>Test PH Assumption</h5>
+<p><br></p>
+<div id="testing-ph-assumption-1" class="section level5">
+<h5>Testing PH Assumption</h5>
 <p>We run the code below to see of the PH assumption is violated. Since p-values are above 0.05, this indicates that the PH assumption was not violated.</p>
 <p>Figure 12: Testing PH Assumption <br></p>
 <pre class="r"><code>cox.zph(model3)</code></pre>
@@ -788,7 +791,7 @@ summary(model3)</code></pre>
            palette = c(&quot;#075CA7&quot;), ggtheme = theme_classic2(), legend = &quot;bottom&quot;)</code></pre>
 <p><img src="survival_files/figure-html/survival_curves-1.png" width="100%" style="background-color: #000000; padding:1px" /></p>
 <p><br></p>
-<p>Lastly, we can predict survival curves with our model and estimate the probability of survival after a certain time point (or death up to a given time point). Using the R code below, we plot the survival functions of a patient aged 80 or older who experienced recurrent stroke with BMI = 30 admitted in 1997, and a patient aged 80 or older who experienced stroke for the first time with BMI = 30 admitted in 1997. Note that while the SAS code</p>
+<p>Lastly, we can predict survival curves with our model and estimate the probability of survival after a certain time point (or death up to a given time point). Using the R code below, we plot the survival functions of a patient aged 80 or older who experienced recurrent stroke with BMI = 30 admitted in 1997, and a patient aged 80 or older who experienced stroke for the first time with BMI = 30 admitted in 1997. Note that you can use the code <code>summary(newmodel)</code> to view the median survival times shown in the plot below (as well as other survival probabilities); for SAS, the equivalent code above would be <code>proc print data = stroke2; run</code> (Figure 8).</p>
 <pre class="r"><code>new_df &lt;- with(stroke, data.frame(id = c(1, 2), 
                                   fstat = c(1, 2), 
                                   stroke = c(1, 0),
