--- a/NHANES1.html
+++ b/NHANES1.html
@@ -337,6 +337,9 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="survival.html">Survival Analysis of Stroke Patients</a>
+    </li>
+    <li>
       <a href="malaria.html">Proposal for Phase III RCT</a>
     </li>
   </ul>
