--- a/README.html
+++ b/README.html
@@ -230,6 +230,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="survival.html">Survival Analysis of Stroke Patients</a>
+    </li>
+    <li>
       <a href="malaria.html">Proposal for Phase III RCT</a>
     </li>
   </ul>
