--- a/NHANES1.html
+++ b/NHANES1.html
@@ -319,7 +319,7 @@ div.tocify {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Data - Analysis - R
+    Data Analysis - R
      
     <span class="caret"></span>
   </a>
