--- a/about.html
+++ b/about.html
@@ -215,7 +215,7 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Data - Analysis - R
+    Data Analysis - R
      
     <span class="caret"></span>
   </a>
