--- a/index.html
+++ b/index.html
@@ -298,16 +298,15 @@ font-weight: bold;
 
 </style>
 <p><br></p>
-<div id="jacky-choi-mphc" class="section level2">
-<h2>Jacky Choi, MPHc</h2>
-<p><link rel="stylesheet" href="styles.css" type="text/css"> <link rel="stylesheet" href="academicons/css/academicons.min.css"/> <link rel="apple-touch-icon" href="/images/jacky.jpg" ></p>
-<p>MPH Graduate Student <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Columbia University Mailman School of Public Health</p>
-<p><br><img src="images/jacky.jpg" alt="jacky" style="width:35%; border:10px solid"></p>
+<div id="jacky-choi" class="section level2">
+<h2>Jacky Choi</h2>
+<p><link rel="stylesheet" href="styles.css" type="text/css"> <link rel="stylesheet" href="academicons/css/academicons.min.css"/></p>
+<p>MPH Graduate Student <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Applied Biostatistics Certificate <br> Columbia University Mailman School of Public Health</p>
 <p><br></p>
 <div id="about-me" class="section level4">
 <h4>About Me</h4>
 <p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.</p>
-<p>To view my resume, you can click <a href="images/Resume.pdf">here</a>.</p>
+<p>To view my resume, you can click <a href="images/resume_nosite.pdf">here</a>.</p>
 <p><br></p>
 </div>
 <div id="website" class="section level4">
