--- a/resume.html
+++ b/resume.html
@@ -298,7 +298,7 @@ font-weight: bold;
 }
 
 </style>
-<p><br> <img src="images/resume.JPG" width="100%" /></p>
+<p><br> <img src="images/resume_nosite.JPG" width="100%" /></p>
 
 
 
