--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ font-weight: bold;
 <div id="jacky-choi" class="section level2">
 <h2>Jacky Choi</h2>
 <p><link rel="stylesheet" href="styles.css" type="text/css"> <link rel="stylesheet" href="academicons/css/academicons.min.css"/></p>
-<p>MPH Graduate Student <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Applied Biostatistics Certificate <br> Columbia University Mailman School of Public Health</p>
+<p>MPH Candidate <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Applied Biostatistics Certificate <br> Columbia University Mailman School of Public Health</p>
 <p><br></p>
 <div id="about-me" class="section level4">
 <h4>About Me</h4>
