--- a/index.html
+++ b/index.html
@@ -297,6 +297,15 @@ font-weight: bold;
 }
 
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137778138-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137778138-1');
+</script>
 <p><br></p>
 <div id="jacky-choi" class="section level2">
 <h2>Jacky Choi</h2>
