--- a/ordinalmodel.html
+++ b/ordinalmodel.html
@@ -300,6 +300,9 @@ div.tocify {
     <li>
       <a href="exploratory1.html">Exploring Activity Trends and Patterns Using EDA</a>
     </li>
+    <li>
+      <a href="exploratory2.html">Exploring NYC Crime Data Using EDA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -326,6 +329,9 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
+    </li>
+    <li>
+      <a href="felonies.html">Differences in Mean Length of NYC Felonies</a>
     </li>
   </ul>
 </li>
@@ -412,6 +418,7 @@ font-weight: bold;
 <li>Logistic Regression</li>
 <li>R</li>
 <li>SAS</li>
+<li>Statistical Analysis</li>
 </ul>
 <p><br></p>
 </div>
