--- a/README.html
+++ b/README.html
@@ -193,6 +193,9 @@ $(document).ready(function () {
     <li>
       <a href="exploratory1.html">Exploring Activity Trends and Patterns Using EDA</a>
     </li>
+    <li>
+      <a href="exploratory2.html">Exploring NYC Crime Data Using EDA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -219,6 +222,9 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
+    </li>
+    <li>
+      <a href="felonies.html">Differences in Mean Length of NYC Felonies</a>
     </li>
   </ul>
 </li>
