--- a/survival.html
+++ b/survival.html
@@ -294,6 +294,9 @@ div.tocify {
     <li>
       <a href="exploratory1.html">Exploring Activity Trends and Patterns Using EDA</a>
     </li>
+    <li>
+      <a href="exploratory2.html">Exploring NYC Crime Data Using EDA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -320,6 +323,9 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
+    </li>
+    <li>
+      <a href="felonies.html">Differences in Mean Length of NYC Felonies</a>
     </li>
   </ul>
 </li>
